--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,11 @@ android {
         pickFirst 'lib/armeabi-v7a/libc++_shared.so'
     }
 
+    compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+}
+
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
