--- a/package.json
+++ b/package.json
@@ -16,34 +16,55 @@
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.5.1",
     "@react-native-firebase/messaging": "^14.5.1",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "axios": "^0.26.1",
+    "faker": "^6.6.6",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-agora": "^3.5.3",
+    "react-native-countdown-circle-timer": "^3.0.9",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "^2.3.1",
     "react-native-incall-manager": "^3.3.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-multiple-select": "^0.5.7",
     "react-native-paper": "^4.11.2",
+    "react-native-peerjs": "^1.0.4",
     "react-native-push-notification": "^8.1.1",
+    "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^1.8.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-webrtc": "^1.98.0"
+    "react-native-webrtc": "^1.98.0",
+    "react-native-webview": "^11.17.2",
+    "rn-wave-bottom-bar": "^2.1.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.40",
+    "@types/react-native": "^0.67.3",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro": "^0.69.0",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.6.2"
   },
   "jest": {
     "preset": "react-native"
