--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-agora": "^3.5.3",
+    "react-native-camera": "^4.2.1",
+    "react-native-canvas": "^0.1.38",
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dropdown-picker": "^5.3.0",
-    "react-native-gesture-handler": "^2.3.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-incall-manager": "^3.3.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.7",
     "react-native-paper": "^4.11.2",
     "react-native-peerjs": "^1.0.4",
     "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^1.13.4",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
@@ -47,6 +50,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-webrtc": "^1.98.0",
     "react-native-webview": "^11.17.2",
+    "react-navigation": "^4.4.4",
     "rn-wave-bottom-bar": "^2.1.1",
     "socket.io-client": "^4.4.1"
   },
